pyquest/ql/test/semantic_analysis/invalid/test015.ql
// Incompatible types for less than operation
form testForm {
	"First Question"
	someIdentifier : boolean = 10.0 < True
}